--- a/css/style.css
+++ b/css/style.css
@@ -281,9 +281,54 @@ header {
   transition: 0.3s all linear;
 }
 
-.about-text p{
-    font-size: 0.938rem;
-    letter-spacing: 1px;
-    text-align: justify;
-    margin-bottom: 1.5rem;
+.about-text p {
+  font-size: 0.938rem;
+  letter-spacing: 1px;
+  text-align: justify;
+  margin-bottom: 1.5rem;
 }
+
+/* Services */
+
+.services-content {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+}
+
+.services-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 15px;
+  background: var(--container-color);
+  border-radius: 0.4rem;
+  transition: 0.5s all cubic-bezier(0.075,0.82,0.165,1);
+}
+
+.services-box:hover{
+    transform: scale(1.05);
+    transition: 0.5s all cubic-bezier(0.075,0.82,0.165,1);
+}
+
+.services-box .bx {
+  font-size: 1.4rem;
+  color: var(--main-color);
+  padding: 10px;
+  border-radius: 5rem;
+  border: 2px dashed var(--bg-color);
+}
+
+.services-box h2{
+    font-size: 1.1rem;
+    font-weight: 500;
+    margin: 0.5rem 0;
+    color: var(--main-color);
+}
+
+.services-box p{
+    font-size: 0.9rem;
+}
+
+
