--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,11 @@ header {
   z-index: 100;
 }
 
+.header-active {
+  background: var(--box-color);
+  transition: 0.4s;
+}
+
 .nav {
   display: flex;
   align-items: center;
@@ -400,29 +405,29 @@ header {
   gap: 1.5rem;
 }
 
-.project-box{
-    padding: 20px 10px;
-    background: var(--box-color);
-    border-radius: 0.4rem;
-    text-align: center;
+.project-box {
+  padding: 20px 10px;
+  background: var(--box-color);
+  border-radius: 0.4rem;
+  text-align: center;
 }
 
-.project-box h2{
-    font-size: 1.2rem;
+.project-box h2 {
+  font-size: 1.2rem;
 }
 
-.project-box span{
-    font-size: 0.845rem;
+.project-box span {
+  font-size: 0.845rem;
 }
 
 /* Reviews */
-.reviews{
+.reviews {
   max-width: 750px;
   margin: auto;
   width: 100%;
 }
 
-.review-box{
+.review-box {
   max-width: 550px;
   margin: auto;
   width: 100%;
@@ -433,36 +438,36 @@ header {
   margin-bottom: 3.5rem !important;
 }
 
-.review-box .bx{
+.review-box .bx {
   font-size: 2rem;
   color: var(--main-color);
   margin-bottom: 0.5rem;
 }
 
-.review-box .review-text{
+.review-box .review-text {
   font-size: 0.89rem;
   margin-bottom: 1rem;
 }
 
-.review-profile{
+.review-profile {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.review-profile h2{
+.review-profile h2 {
   font-size: 1.1rem;
   line-height: 1.3rem;
   color: var(--main-color);
   font-weight: 600;
 }
 
-.review-profile span{
+.review-profile span {
   font-size: 0.84rem;
   margin: 0.5rem 0 0.7rem;
 }
 
-.review-box img{
+.review-box img {
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -475,7 +480,7 @@ header {
   object-position: center;
 }
 
-.swiper-pagination-bullet{
+.swiper-pagination-bullet {
   width: 6px !important;
   height: 6px !important;
   border-radius: 0.2rem !important;
@@ -483,14 +488,13 @@ header {
   opacity: 1 !important;
 }
 
-.swiper-pagination-bullet-active{
+.swiper-pagination-bullet-active {
   width: 1.5rem !important;
   background: var(--main-color) !important;
 }
 
-
 /* Contact Form */
-.contact-form{
+.contact-form {
   max-width: 600px;
   margin: auto;
   width: 100%;
@@ -498,7 +502,8 @@ header {
   row-gap: 1rem;
 }
 
-.contact-form input,.contact-form textarea{
+.contact-form input,
+.contact-form textarea {
   border: none;
   outline: none;
   font-size: 0.9rem;
@@ -508,7 +513,7 @@ header {
   border-radius: 0.4rem;
 }
 
-.contact-form .send-btn{
+.contact-form .send-btn {
   width: 120px;
   font-size: 1rem;
   letter-spacing: 1px;
@@ -519,7 +524,117 @@ header {
   cursor: pointer;
 }
 
-.contact-form .send-btn:hover{
+.contact-form .send-btn:hover {
   background: #546eff;
   transition: 0.3s all linear;
+}
+
+/* Footer */
+.footer {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 1.4rem;
+  padding: 30px 0;
+}
+
+.footer p {
+  font-size: 0.9rem;
+}
+
+.footer-links {
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+}
+
+.footer-links a {
+  font-size: 1rem;
+  font-weight: 400;
+  color: var(--bg-color);
+}
+
+.footer-links a:hover {
+  color: var(--main-color);
+  transition: 0.3s all linear;
+}
+
+/* Scroll Top */
+
+.scroll-top {
+  position: fixed;
+  bottom: -100%;
+  right: 1.5rem;
+}
+
+.scroll-top .bx{
+  padding: 8px;
+  font-size: 1.3rem;
+  color: var(--bg-color);
+  background: var(--box-color);
+  border-radius: 0.2rem;
+}
+
+.scroll-top .bx:hover{
+  background: var(--container-color);
+  transition: 0.3s;
+}
+
+.scroll-active{
+  bottom: 2rem;
+  transition: 0.3s;
+}
+
+
+/* Media Query For Responsive */
+
+@media (max-width:990px){
+  .container{
+    margin: 0 auto;
+    width: 90%;
+  }
+}
+
+@media (max-width:892px){
+  section{
+    padding: 2rem 0;
+  }
+  .nav{
+    padding: 12px 0;
+  }
+  .heading{
+    font-size: 4rem;
+  }
+  .portfolio-box{
+    height: 257px;
+  }
+}
+
+@media (max-width:775px){
+  .logo{
+    font-size: 1.1rem;
+  }
+  .home{
+    min-height: 500px;
+    padding-top: 6rem;
+  }
+  .home-text h3{
+    font-size: 1rem;
+  }
+  .home-text h2{
+    font-size: 3rem;
+    line-height: 3.8rem;
+  }
+  .home-text p{
+    font-size: 0.825rem;
+  }
+  .services-content{
+    grid-template-columns: repeat(2,1fr);
+  }
+  .portfolio-box{
+    height: 245px;
+  }
+  .menu-icon{
+    display: flex;
+  }
 }
